js/js.translator/testData/incremental/invalidation/class/lib1/l1.2_inline_class.kt
inline class Demo(val x: Int) {
}
